--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,4 +1,4 @@
- <div class="container-fluid full-window" style="background-image: url('/src/background-gradient-lights.jpg')">
+ <div class="container-fluid full-window" style="background-color:slateblue">
     <div class="row align-items-center justify-content-center">
         <h1 style="text-align: center;">Check Weather</h1>
     </div>
@@ -6,10 +6,13 @@
     <div class="row align-items-center justify-content-center mt-5">
         <form class="col-md-6">
             <div class="input-group">
-                <input type="text" name="cityName" [placeholder]="isEmty ? 'Please enter a city name' : 'City name...'" [(ngModel)]="city" (keydown.enter)="getWeather()" [ngClass]="{'empty-field': isEmty}" class="form-control">
-                <button type="button" class="btn btn-primary" (click)="getWeather()">Get Weather</button>
+                <input type="text" name="cityName" [placeholder]="isEmty ? 'Please enter a city name' : 'City name...'" 
+                [(ngModel)]="city" (keydown.enter)="getWeather()" [ngClass]="{'empty-field': isEmty}" class="form-control">
+                <button type="button" class="btn btn-outline-dark" (click)="getWeather()">Get Weather</button>
+                <button type="button" class="btn btn-outline-dark" (click)="onReset()">Reset</button>
             </div>
         </form>
+       
     </div>
 
     <div class="row align-items-center justify-content-center mt-5">
@@ -20,7 +23,9 @@
             <p>Pressure: {{ weatherData.main.pressure }}</p>
             <p>Wind Speed: {{ weatherData.wind.speed }}</p>
             <p>Weather: {{ weatherData.weather[0].description }}</p>
-            <img src="http://openweathermap.org/img/wn/{{ weatherData.weather[0].icon }}.png" alt="weather icon" style="width: 100px; height: 100px;">
+            <img src="http://openweathermap.org/img/wn/{{ weatherData.weather[0].icon }}.png" 
+            alt="weather icon" style="width: 100px; height: 100px;">   
         </div>
     </div>
+    
 </div>
