--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -8,17 +8,22 @@
             <div class="input-group">
                 <input type="text" name="cityName" [placeholder]="isEmty ? 'Please enter a city name' : 'City name...'" 
                 [(ngModel)]="city" (keydown.enter)="getWeather()" [ngClass]="{'empty-field': isEmty}" class="form-control">
-                <button type="button" class="btn btn-outline-dark" (click)="getWeather()">Get Weather</button>
+                <button type="button" class="btn btn-outline-dark dropdown-toggle" id="dropdownMenuButton" 
+                data-bs-toggle="dropdown" aria-expanded="false" >Get Weather</button>
                 <button type="button" class="btn btn-outline-dark" (click)="onReset()">Reset</button>
+
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" (click)="getWeather()">Celsius</a></li>
+                    <li><a class="dropdown-item" (click)="getWeatherInFahrenheit()">Fahrenheit</a></li>
+                </ul>
             </div>
         </form>
-       
     </div>
 
     <div class="row align-items-center justify-content-center mt-5">
         <div class="col-md-3 align-items-center" *ngIf="weatherData">
             <h2>{{ weatherData.name }}</h2>
-            <p>Temperature: {{ roundTemp }} °C</p>
+            <p>Temperature: {{ temperatureUnit === 'Celsius' ? roundTemp + ' °' : farenheit + ' °' }}</p>
             <p>Humidity: {{ weatherData.main.humidity }}</p>
             <p>Pressure: {{ weatherData.main.pressure }}</p>
             <p>Wind Speed: {{ weatherData.wind.speed }}</p>
