--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -24,9 +24,9 @@
         <div class="col-md-3 align-items-center" *ngIf="weatherData">
             <h2>{{ weatherData.name }}</h2>
             <p>Temperature: {{ temperatureUnit === 'Celsius' ? roundTemp + ' C°' : farenheit + ' F°' }}</p>
-            <p>Humidity: {{ weatherData.main.humidity }}</p>
-            <p>Pressure: {{ weatherData.main.pressure }}</p>
-            <p>Wind Speed: {{ weatherData.wind.speed }}</p>
+            <p>Humidity: {{ weatherData.main.humidity }} %</p>
+            <p>Pressure: {{ weatherData.main.pressure }} hPa</p>
+            <p>Wind Speed: {{ weatherData.wind.speed }} m/s</p>
             <p>Weather: {{ weatherData.weather[0].description }}</p>
             <img src="http://openweathermap.org/img/wn/{{ weatherData.weather[0].icon }}.png" 
             alt="weather icon" style="width: 100px; height: 100px;">   
