--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -8,13 +8,27 @@
 }
 
 p {
-    font-size: 1.5em;
+    font-size: 2em;
+    font-weight: 900;
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 5em;
+    margin-top: 100px;
+    font-weight: 900;
 }
 h2 {
-    font-size: 2.5em;
+    font-size: 3em;
+    font-weight: 900;
+}
+
+input {
+    font-size: 1.5em;
+    font-weight: 900;
+}
+
+button {
+    font-size: 1.5em;
+    font-weight: 900;
 }
 
