--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -7,14 +7,15 @@
         <form class="col-md-6">
             <div class="input-group">
                 <input type="text" name="cityName" [placeholder]="isEmty ? 'Please enter a city name' : 'City name...'" 
-                [(ngModel)]="city" (keydown.enter)="getWeather()" [ngClass]="{'empty-field': isEmty}" class="form-control">
+                [(ngModel)]="city" (keydown.enter)="getWeatherInCelcius()" [ngClass]="{'empty-field': isEmty}" class="form-control">
+
                 <button type="button" class="btn btn-outline-dark dropdown-toggle" id="dropdownMenuButton" 
                 data-bs-toggle="dropdown" aria-expanded="false" >Get Weather</button>
                 <button type="button" class="btn btn-outline-dark" (click)="onReset()">Reset</button>
 
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" (click)="toggleTemperatureUnit()">Celsius</a></li>
-                    <li><a class="dropdown-item" (click)="toggleTemperatureUnit()">Fahrenheit</a></li>
+                    <li><a class="dropdown-item" (click)="getWeatherInCelcius()" >Celsius</a></li>
+                    <li><a class="dropdown-item" (click)="getWeatherInFahrenheit()" >Fahrenheit</a></li>
                 </ul>
             </div>
         </form>
@@ -29,7 +30,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-thermometer-sun" viewBox="0 0 16 16">
                     <path d="M5 12.5a1.5 1.5 0 1 1-2-1.415V2.5a.5.5 0 0 1 1 0v8.585A1.5 1.5 0 0 1 5 12.5"/>
                     <path d="M1 2.5a2.5 2.5 0 0 1 5 0v7.55a3.5 3.5 0 1 1-5 0zM3.5 1A1.5 1.5 0 0 0 2 2.5v7.987l-.167.15a2.5 2.5 0 1 0 3.333 0L5 10.486V2.5A1.5 1.5 0 0 0 3.5 1m5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0v-1a.5.5 0 0 1 .5-.5m4.243 1.757a.5.5 0 0 1 0 .707l-.707.708a.5.5 0 1 1-.708-.708l.708-.707a.5.5 0 0 1 .707 0M8 5.5a.5.5 0 0 1 .5-.5 3 3 0 1 1 0 6 .5.5 0 0 1 0-1 2 2 0 0 0 0-4 .5.5 0 0 1-.5-.5M12.5 8a.5.5 0 0 1 .5-.5h1a.5.5 0 1 1 0 1h-1a.5.5 0 0 1-.5-.5m-1.172 2.828a.5.5 0 0 1 .708 0l.707.708a.5.5 0 0 1-.707.707l-.708-.707a.5.5 0 0 1 0-.708M8.5 12a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0v-1a.5.5 0 0 1 .5-.5"/>
-                  </svg> Temperature: {{ temperatureUnit === 'Celsius' ? roundTemp + ' C° ' : farenheit + ' F° ' }}
+                  </svg> Temperature: {{ temperatureUnit === 'Celsius' ? roundTemp + '°C' : fahrenheit + '°F' }}
                 </p>
             <p><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-moisture" viewBox="0 0 16 16">
                 <path d="M13.5 0a.5.5 0 0 0 0 1H15v2.75h-.5a.5.5 0 0 0 0 1h.5V7.5h-1.5a.5.5 0 0 0 0 1H15v2.75h-.5a.5.5 0 0 0 0 1h.5V15h-1.5a.5.5 0 0 0 0 1h2a.5.5 0 0 0 .5-.5V.5a.5.5 0 0 0-.5-.5zM7 1.5l.364-.343a.5.5 0 0 0-.728 0l-.002.002-.006.007-.022.023-.08.088a29 29 0 0 0-1.274 1.517c-.769.983-1.714 2.325-2.385 3.727C2.368 7.564 2 8.682 2 9.733 2 12.614 4.212 15 7 15s5-2.386 5-5.267c0-1.05-.368-2.169-.867-3.212-.671-1.402-1.616-2.744-2.385-3.727a29 29 0 0 0-1.354-1.605l-.022-.023-.006-.007-.002-.001zm0 0-.364-.343zm-.016.766L7 2.247l.016.019c.24.274.572.667.944 1.144.611.781 1.32 1.776 1.901 2.827H4.14c.58-1.051 1.29-2.046 1.9-2.827.373-.477.706-.87.945-1.144zM3 9.733c0-.755.244-1.612.638-2.496h6.724c.395.884.638 1.741.638 2.496C11 12.117 9.182 14 7 14s-4-1.883-4-4.267"/>
