--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     font-family: "Josefin Slab", serif;
+    height: 100vh;
+
 }
