--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,4 +1,5 @@
- <div class="container-fluid full-window" style="background-color:slateblue">
+<div class="bg-image">
+<div class="container-fluid">
     <div class="row align-items-center justify-content-center">
         <h1 style="text-align: center;">Check Weather</h1>
     </div>
@@ -49,4 +50,5 @@
         </div>
     </div>
     
+</div>
 </div>
