suggestion output style

--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -45,4 +45,11 @@ button {
     left: 0;
 }
 
+#suggestions {
+    color: black;
+    font-size: 0.5em;
+    text-decoration: none;
+    position: relative;
+    margin-left: 350px;
+}
 
